generacion de detalle de bitacora
